add JPA statistics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,17 @@ quarkus.hibernate-orm.log.sql: true
 
 # suppress inspection "UnusedProperty"
 smallrye.graphql.errorExtensionFields: code,exception,description,validationErrorType,queryPath
+# suppress inspection "UnusedProperty"
+mp.graphql.showErrorMessage: java.lang.RuntimeException
+# suppress inspection "UnusedProperty"
+smallrye.graphql.unwrapExceptions: javax.ejb.EJBException,java.lang.IllegalStateException
+smallrye.graphql.printDataFetcherException: true
 
 # suppress inspection "QsProperties"
 quarkus.hibernate-orm.metrics.enabled: true
 
-quarkus.jaeger.service-name: demo
-quarkus.jaeger.sampler-type: const
-quarkus.jaeger.sampler-param: 1
-
-quarkus.log.console.format: %d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
+#quarkus.jaeger.service-name: demo
+#quarkus.jaeger.sampler-type: const
+#quarkus.jaeger.sampler-param: 1
+#
+#quarkus.log.console.format: %d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
